--- a/css/responsive.css
+++ b/css/responsive.css
@@ -87,7 +87,7 @@
     flex-direction: column;
     align-items: flex-start;
   }
-  .offers .innerOffer .weOfferTitle{
+  .offers .innerOffer .weOfferTitle {
     flex: 0 0 100%;
     max-width: 100%;
     text-align: left;
@@ -95,8 +95,8 @@
     padding-bottom: 20px;
     padding-right: 0;
   }
-  .offers .innerOffer .weOfferTitle h2:nth-child(2)::after{
-    content: '';
+  .offers .innerOffer .weOfferTitle h2:nth-child(2)::after {
+    content: "";
     position: absolute;
     width: 40px;
     height: 3px;
@@ -105,7 +105,7 @@
     bottom: -20px;
     display: block;
   }
-  .offers .innerOffer .weOfferSubTitle{
+  .offers .innerOffer .weOfferSubTitle {
     flex: 0 0 100%;
     max-width: 100%;
     padding-top: 20px;
@@ -126,8 +126,70 @@
   }
 }
 @media (max-width: 576px) {
-    .offers .mainFeatures .innerFeature {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
+  .offers .mainFeatures .innerFeature {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+/* ABOUT US SECTION */
+@media (max-width: 991px) {
+  .innerAboutUs .aboutUsTxt .aboutFeatures {
+    justify-content: start;
+    flex-wrap: wrap;
+    margin-top: 50px;
+  }
+  .innerAboutUs .aboutUsTxt .aboutFeatures .featureMain {
+    flex: 0 0 45%;
+    max-width: 45%;
+    margin-bottom: 20px;
+  }
+  .innerAboutUs .aboutUsTxt .aboutFeatures .featureMain:nth-child(2) {
+    border-left: none;
+    padding: 0;
+    border-right: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .innerAboutUs {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .innerAboutUs .aboutImage,
+  .innerAboutUs .aboutUsTxt,
+  .innerAboutUs .aboutUsTxt .aboutFeatures .featureMain {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .innerAboutUs .aboutUsTxt {
+    padding: 25px 20px;
+  }
+}
+
+/* FACT AND FIGURE */
+@media (max-width: 991px) {
+  .factsFigure .figureNumbers {
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 576px) {
+  .factnFigure {
+    padding: 40px 0;
+  }
+  .factsFigure .figureNumbers {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
+  .factsFigure .figureNumbers h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+  }
+  .factsFigure .figureNumbers p {
+    font-style: 14px;
+  }
 }
