--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ table {
 .pageHeader .innerHeader .dropdown .dropbtn {
   background-color: #ffffff;
   color: black;
-  padding: 8px;
+  padding: 10px;
   font-size: 12px;
   border: none;
   cursor: pointer;
@@ -210,7 +210,7 @@ table {
 
 .pageHeader .innerHeader .dropdown .dropdown-content a {
   color: black;
-  padding: 6px 20px;
+  padding: 6px 16.5px;
   text-decoration: none;
   display: block;
   width: -webkit-fit-content;
@@ -221,6 +221,7 @@ table {
 .pageHeader .innerHeader .dropdown .dropdown-content a:hover {
   background-color: #f1f1f1;
 }
+
 /* TOP HEADER BAR ENDS*/
 
 /* HEADER IMAGE SECTION START */
@@ -334,13 +335,104 @@ nav ul li:hover .nav-dropdown {
   opacity: 1;
   z-index: 999;
 }
+.giveACall {
+  display: none;
+}
+
+.mobileNav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #1c3a5d;
+  width: 100%;
+  height: 100%;
+  z-index: 9990;
+  display: none;
+  transition: .6s all;
+}
+.mobileNav ul{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.mobileNav ul li{
+  padding: 10px 0;
+  text-align: center;
+}
+.mobileNav ul li select{
+  /* background: transparent; */
+  border: none;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 0;
+}
+.mobileNav ul li a{
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.mobactive{
+  display: block;
+}
+.closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 30px;
+    color: #fff;
+}
+/* Mobile Nav */
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  display: none;
+  z-index: 9900000;
+  top: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+.overlay .oneHundread {
+  width: 100%;
+}
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover,
+.overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
 
 /* NAVBAR SECTION ENDS */
 
 /* SLIDER SECTION START */
 .mySwiper .swiper-wrapper .swiper-slide {
   position: relative;
-  /* padding: 50px 0; */
 }
 
 .mySwiper .swiper-wrapper .swiper-slide img {
@@ -428,25 +520,7 @@ nav ul li:hover .nav-dropdown {
   font-size: 14px;
   line-height: 18px;
 }
-/* .offers .innerOffer h2 {
-  padding-right: 20px;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 30%;
-  flex: 0 0 30%;
-  max-width: 30%;
-  font-size: 25px;
-  text-align: right;
-  font-weight: 700;
-}
 
-.offers .innerOffer p {
-  padding-left: 20px;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 70%;
-  flex: 0 0 70%;
-  max-width: 70%;
-  line-height: 1.4;
-} */
 .offers .mainFeatures {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -479,13 +553,6 @@ nav ul li:hover .nav-dropdown {
   margin-left: 8px;
 }
 
-/* .offers .mainFeatures .innerFeature .featureImg {
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 40%;
-  flex: 0 0 40%;
-  max-width: 40%;
-} */
-
 .offers .mainFeatures .innerFeature .featureTxt {
   padding-left: 15px;
 }
@@ -503,7 +570,7 @@ nav ul li:hover .nav-dropdown {
   width: 20%;
   height: 3px;
   background: green;
-  bottom: -3px;
+  bottom: 0;
   left: 0;
 }
 
@@ -511,8 +578,7 @@ nav ul li:hover .nav-dropdown {
   padding-top: 10px;
   font-size: 14px;
   line-height: 16px;
-  color: #8e9799;
-  font-weight: 300;
+  color: #6a6a6a;
 }
 
 /* OFFER SECTION ENDS */
@@ -615,9 +681,11 @@ nav ul li:hover .nav-dropdown {
   padding: 0 10px;
   border-right: 1px dashed #fff;
 }
-
+.innerAboutUs .aboutUsTxt .aboutFeatures .featureMain .featurePoints {
+  margin: 5px 10px;
+}
 .innerAboutUs .aboutUsTxt .aboutFeatures .featureMain .featurePoints h2 {
-  margin: 5px;
+  /* margin: 5px; */
   color: #fff;
   font-weight: 500;
 }
@@ -730,26 +798,460 @@ nav ul li:hover .nav-dropdown {
   -webkit-box-align: center;
   align-items: center;
 }
-.testSlider .custReview .customerProfile .custDetails{
+.testSlider .custReview .customerProfile .custDetails {
   padding: 20px;
 }
-.testSlider .custReview .customerProfile .custDetails h2{
+.testSlider .custReview .customerProfile .custDetails h2 {
   font-size: 18px;
   margin-bottom: 20px;
   font-weight: 600;
 }
-.testSlider .custReview .customerProfile .custDetails p{
-  font-size: 16px;
+.testSlider .custReview .customerProfile .custDetails p {
+  font-size: 14px;
 }
-.testSlider .custReview .customerProfile .custDetails .starRating{
+.testSlider .custReview .customerProfile .custDetails .starRating {
   margin-top: 20px;
 }
-.testSlider .custReview .customerWords p{
+.testSlider .custReview .customerWords p {
   line-height: 20px;
   color: rgb(85, 85, 85);
   padding: 20px 0 10px 0;
 }
 
-.testSlider .custReview .customerWords img{
+.testSlider .custReview .customerWords img {
   width: unset;
+}
+
+.nav {
+  cursor: pointer;
+  user-select: none;
+  text-decoration: none;
+  display: inline-block;
+  color: inherit;
+  transition: border 0.2s;
+  border-bottom: 5px solid rgba(142, 68, 173, 0.2);
+  padding: 3px 2px;
+}
+
+.layout {
+  display: grid;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  grid-template-rows: 50px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+label.nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-collapse: collapse;
+  border: 1px solid #cecece;
+  background: #fff;
+  user-select: none;
+  transition: background 0.4s, padding-left 0.2s;
+  padding-left: 0;
+}
+label.nav:hover {
+  background: #00aaa4;
+  color: #fff;
+}
+
+input[type="radio"]:checked + .page + label.nav {
+  background: #00aaa4;
+  color: #ffffff;
+}
+
+input[type="radio"]:checked + .page + label.nav svg {
+  opacity: 1;
+}
+label.nav span {
+  padding-left: 0px;
+  position: relative;
+}
+label.nav svg {
+  position: absolute;
+  left: 50%;
+  bottom: -26px;
+  transform: translateX(-50%);
+  font-size: 20px;
+  display: none;
+}
+input[type="radio"]:checked + .page + label.nav svg {
+  display: block;
+}
+.page {
+  grid-column-start: 1;
+  grid-row-start: 2;
+  grid-column-end: span 3;
+}
+
+.page-contents > * {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.2s, transform 0.2s;
+}
+.page-contents > *:nth-child(1) {
+  transition-delay: 0.4s;
+}
+.page-contents > *:nth-child(2) {
+  transition-delay: 0.6s;
+}
+.page-contents > *:nth-child(3) {
+  transition-delay: 0.8s;
+}
+.page-contents > *:nth-child(4) {
+  transition-delay: 1s;
+}
+.page-contents > *:nth-child(5) {
+  transition-delay: 1.2s;
+}
+.page-contents > *:nth-child(6) {
+  transition-delay: 1.4s;
+}
+.page-contents > *:nth-child(7) {
+  transition-delay: 1.6s;
+}
+.page-contents > *:nth-child(8) {
+  transition-delay: 1.8s;
+}
+.page-contents > *:nth-child(9) {
+  transition-delay: 2s;
+}
+.page-contents > *:nth-child(10) {
+  transition-delay: 2.2s;
+}
+.page-contents > *:nth-child(11) {
+  transition-delay: 2.4s;
+}
+.page-contents > *:nth-child(12) {
+  transition-delay: 2.6s;
+}
+.page-contents > *:nth-child(13) {
+  transition-delay: 2.8s;
+}
+.page-contents > *:nth-child(14) {
+  transition-delay: 3s;
+}
+.page-contents > *:nth-child(15) {
+  transition-delay: 3.2s;
+}
+.page-contents > *:nth-child(16) {
+  transition-delay: 3.4s;
+}
+.page-contents > *:nth-child(17) {
+  transition-delay: 3.6s;
+}
+.page-contents > *:nth-child(18) {
+  transition-delay: 3.8s;
+}
+.page-contents > *:nth-child(19) {
+  transition-delay: 4s;
+}
+.page-contents > *:nth-child(20) {
+  transition-delay: 4.2s;
+}
+
+input[type="radio"] + .page {
+  transition: transform 0.2s;
+  transform: translateX(100%);
+}
+
+input[type="radio"]:checked + .page {
+  transform: translateX(0%);
+}
+input[type="radio"]:checked + .page .page-contents > * {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+.page-contents {
+  padding: 15px 0;
+}
+.page-contents h2 {
+  font-weight: 500;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.page-contents p {
+  font-size: 12px;
+  color: #424242;
+  font-weight: 300;
+  line-height: 23px;
+  margin-bottom: 50px;
+}
+.ckeckList {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+.ckeckList ul {
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+.ckeckList ul li {
+  padding: 5px;
+}
+.ckeckList ul li svg {
+  color: #0071bb;
+  font-size: 20px;
+}
+.ourTeam{
+  background: #f5f5f5;
+    padding: 70px 0;
+}
+.innerTeam .teamTitle h2 {
+  font-size: 24px;
+  font-weight: 500;
+  color: rgb(0, 0, 0);
+  position: relative;
+  margin-bottom: 60px;
+}
+
+.innerTeam .teamTitle h2::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 3px;
+  background: green;
+  bottom: -20px;
+  left: 0;
+}
+
+.mainTeam {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.profiles {
+  flex: 0 0 22%;
+  max-width: 22%;
+  margin: 10px;
+}
+.profiles figure {
+  background-color: #0071bb;
+}
+.profiles figure figcaption {
+  text-align: center;
+  color: #fff;
+  padding: 10px;
+}
+
+.profiles figure figcaption h2 {
+  font-weight: 500;
+  margin-bottom: 6px;
+}
+.profiles figure figcaption p {
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.NewSecion {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+.NewSecion .leftNews,
+.NewSecion .rightForm {
+  flex: 0 0 45%;
+  max-width: 45%;
+  margin: 10px;
+}
+.NewSecion .leftNews h2,
+.NewSecion .rightForm h2 {
+  font-size: 24px;
+  font-weight: 500;
+  color: rgb(0, 0, 0);
+  position: relative;
+  margin-bottom: 60px;
+}
+
+.NewSecion .leftNews h2::after,
+.NewSecion .rightForm h2::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 3px;
+  background: green;
+  bottom: -20px;
+  left: 0;
+}
+
+.news {
+  padding: 70px 0;
+}
+.newsInfo {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  padding: 23px 0;
+}
+.newsInfo .newsPara {
+  padding-left: 16px;
+}
+.newsInfo .newsPara h3 {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.newsInfo .newsPara p {
+  font-size: 14px;
+}
+
+.form .form-input {
+  margin-bottom: 35px;
+}
+
+.form input,
+.form select {
+  border: 1px solid #d8d8d8;
+  font-size: 14px;
+}
+
+.form input:hover,
+.form input:focus,
+.form select:hover,
+.form select:focus {
+  outline: none;
+  border: 1px solid #d8d8d8;
+  box-shadow: none;
+}
+
+.form-input button {
+  background: #ffca0d;
+  width: 220px;
+  font-weight: 600;
+  font-size: 18px;
+}
+.form-input button:hover,
+.form-input button:focus {
+  outline: none;
+  border: 1px solid #d8d8d8;
+  box-shadow: none;
+}
+
+.footer {
+  background: #27384b;
+  overflow: hidden;
+}
+.paddngarea{
+  padding: 70px 0;
+}
+.footerImg {
+  margin-bottom: 40px;
+}
+.footerPara p {
+  color: #959595;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+.footerPara .callNo {
+  margin: 20px 0;
+}
+.footerPara .callNo svg {
+  color: #007bff;
+  font-size: 20px;
+}
+.footerPara .callNo a {
+  text-decoration: none;
+  color: #007bff;
+}
+.footerPara .mailId a {
+  text-decoration: none;
+  color: #959595;
+  font-size: 14px;
+}
+
+.socialMedia ul {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  margin: 30px 0 20px;
+}
+
+.socialMedia ul li {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  align-items: center;
+  margin: 0 10px 0 0;
+  border: 0.7px solid #959595;
+  border-radius: 100%;
+  width: 30px;
+  height: 30px;
+}
+
+.socialMedia ul li a svg {
+  color: #959595;
+}
+
+.footerTitle {
+  margin-bottom: 40px;
+}
+.footerTitle h2 {
+  font-size: 20px;
+  font-weight: 500;
+  color: #959595;
+  position: relative;
+  margin-bottom: 60px;
+}
+
+.footerTitle h2::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 3px;
+  background: #007bff;
+  bottom: -20px;
+  left: 0;
+}
+
+.servicesItem ul li {
+  margin-top: 15px;
+}
+.servicesItem ul li a {
+  color: #959595;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.youtubeVideo {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.copyright {
+  background-color: #253547;
+  padding: 20px 0;
+  color: #959595;
 }
