--- a/css/main.css
+++ b/css/main.css
@@ -222,6 +222,72 @@ table {
   background-color: #f1f1f1;
 }
 
+.newHeaderMain {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.afterSearchIcon svg {
+  position: absolute;
+  top: 8px;
+  right: 0;
+  color: #898989;
+  font-size: 20px;
+  display: none;
+}
+
+.newHeaderMain p {
+  color: #898989;
+  font-size: 14px;
+}
+
+.newHeaderPara {
+  flex: 0 0 40%;
+  max-width: 40%;
+}
+.newHeaderMain .searchWithIcon {
+  flex: 0 0 40%;
+  max-width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.dayTime {
+  flex: 0 0 20%;
+  max-width: 20%;
+}
+.newHeaderMain .searchWithIcon .leftDroptown #select {
+  font-size: 16px;
+}
+.newHeaderMain .searchWithIcon .rightTxtBox {
+  position: relative;
+}
+.newHeaderMain .searchWithIcon .rightTxtBox input {
+  position: relative;
+  padding: 8px 20px;
+  background: transparent;
+  border: 1px solid #898989;
+  color: #898989;
+  outline: none;
+}
+
+.newHeaderMain .searchWithIcon .rightTxtBox svg {
+  position: absolute;
+  top: 9px;
+  right: 14px;
+  color: #898989;
+  font-size: 20px;
+  cursor: pointer;
+}
 /* TOP HEADER BAR ENDS*/
 
 /* HEADER IMAGE SECTION START */
@@ -265,7 +331,7 @@ nav ul {
 }
 
 nav ul li {
-  padding: 20px 0;
+  padding: 30px 0;
 }
 
 nav ul li svg {
@@ -348,39 +414,66 @@ nav ul li:hover .nav-dropdown {
   height: 100%;
   z-index: 9990;
   display: none;
-  transition: .6s all;
+  transition: 0.6s all;
 }
-.mobileNav ul{
+.mobileNav ul {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 0 25px;
 }
-.mobileNav ul li{
+.mobileNav ul li {
   padding: 10px 0;
-  text-align: center;
+  text-align: left;
+  width: 100%;
 }
-.mobileNav ul li select{
-  /* background: transparent; */
+.mobileNav ul li select {
+  background: transparent;
   border: none;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 0;
+  text-transform: uppercase;
+  text-align: left;
 }
-.mobileNav ul li a{
+.mobileNav ul li select:focus,
+.mobileNav ul li select:active {
+  outline: none;
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  color: #fff;
+}
+.mobileNav ul li select option {
+  color: #000;
+  text-transform: lowercase;
+}
+.mobileNav ul li a {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
 }
-.mobactive{
+.mobactive {
   display: block;
 }
+.mobdropDown {
+  position: relative;
+}
+.mobdropDown svg {
+  color: #fff;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
 .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 30px;
-    color: #fff;
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 30px;
+  color: #fff;
 }
 /* Mobile Nav */
 .overlay {
@@ -567,7 +660,7 @@ nav ul li:hover .nav-dropdown {
 .offers .mainFeatures .innerFeature .featureTxt h2::after {
   content: "";
   position: absolute;
-  width: 20%;
+  width: 40px;
   height: 3px;
   background: green;
   bottom: 0;
@@ -767,6 +860,7 @@ nav ul li:hover .nav-dropdown {
 .mainCompanyValue .ourValues {
   flex: 0 0 60%;
   max-width: 60%;
+  padding-left: 70px;
 }
 
 .mainCompanyValue .testimonials .valueTitle h2,
@@ -813,7 +907,7 @@ nav ul li:hover .nav-dropdown {
   margin-top: 20px;
 }
 .testSlider .custReview .customerWords p {
-  line-height: 20px;
+  line-height: 27px;
   color: rgb(85, 85, 85);
   padding: 20px 0 10px 0;
 }
@@ -981,11 +1075,13 @@ input[type="radio"]:checked + .page .page-contents > * {
 }
 
 .page-contents p {
-  font-size: 12px;
+  font-size: 16px;
   color: #424242;
-  font-weight: 300;
-  line-height: 23px;
   margin-bottom: 50px;
+  
+  line-height: 27px;
+  color: rgb(85, 85, 85);
+  font-size: 16px;
 }
 .ckeckList {
   display: -webkit-box;
@@ -1005,9 +1101,9 @@ input[type="radio"]:checked + .page .page-contents > * {
   color: #0071bb;
   font-size: 20px;
 }
-.ourTeam{
+.ourTeam {
   background: #f5f5f5;
-    padding: 70px 0;
+  padding: 70px 0;
 }
 .innerTeam .teamTitle h2 {
   font-size: 24px;
@@ -1034,6 +1130,7 @@ input[type="radio"]:checked + .page .page-contents > * {
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .profiles {
@@ -1043,6 +1140,9 @@ input[type="radio"]:checked + .page .page-contents > * {
 }
 .profiles figure {
   background-color: #0071bb;
+}
+.profiles figure img {
+  width: 100%;
 }
 .profiles figure figcaption {
   text-align: center;
@@ -1070,8 +1170,12 @@ input[type="radio"]:checked + .page .page-contents > * {
 .NewSecion .rightForm {
   flex: 0 0 45%;
   max-width: 45%;
-  margin: 10px;
+  /* margin: 10px; */
 }
+.NewSecion .rightForm {
+  padding-left: 70px;
+}
+
 .NewSecion .leftNews h2,
 .NewSecion .rightForm h2 {
   font-size: 24px;
@@ -1103,6 +1207,12 @@ input[type="radio"]:checked + .page .page-contents > * {
   display: flex;
   padding: 23px 0;
 }
+
+.newsInfo:nth-child(3) {
+  border-top: 1px solid #c2c2c2;
+  border-bottom: 1px solid #c2c2c2;
+}
+
 .newsInfo .newsPara {
   padding-left: 16px;
 }
@@ -1151,8 +1261,11 @@ input[type="radio"]:checked + .page .page-contents > * {
   background: #27384b;
   overflow: hidden;
 }
-.paddngarea{
+.paddngarea {
   padding: 70px 0;
+}
+.footerList{
+  padding: 0 15px;
 }
 .footerImg {
   margin-bottom: 40px;
